--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!doctype html>
 <html lang="en">
 
-<!-- Mirrored from thomello.github.io/portfolio/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 06 Oct 2023 09:45:01 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
 	<meta charset="utf-8">
-	<meta name="author" content="Thomello Mats'asa">
+	<meta name="author" content="Tokelo Makafane">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
 
-	<title>Stephen | Thomello Matsasa | Software Engineer</title>
+	<title>Nelson | Tokelo Makafane | LEAD DEVELOPER</title>
 	<meta name="description" content="This is a portfolio website of Thomello - Stephen Mats'asa. A full-stack developer, Start-up founder and freelancer.">
-	<meta name="keywords" content="Thomello | Matsasa | Stephen | portfolio | website">
+	<meta name="keywords" content="TOKELO | MAKAFANE | NELSON | portfolio | website">
 	<link rel="canonical" href="#" />
 	<meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
@@ -18,7 +17,7 @@
 	<meta property="og:title" content="Stephen's portfolio website">
 	<meta property="og:url" content="">
 	<meta property="og:site_name" content="">
-	<meta name="og:description" content="This is a portfolio website of Thomello - Stephen Mats'asa. A full-stack developer, Start-up founder and freelancer.">
+	<meta name="og:description" content="This is a portfolio website of Tokelo- Nelson Makafane. A full-stack developer.">
 
 	<meta name="robots" content="index, follow" />
 
