--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				</div>
 				<div class="bg-theme-blue-base rounded p-6 shadow-xl mr-0 sm:-mr-16 mb-6">
 					<p class="text-theme-gray-deep leading-relaxed">
-						A membership portal delivered to a Health, Safety and Environment (HSE) organisation with over 15 000 members in Nigeria.
+						A membership portal delivered to a Heaklth, Safety and Environment (HSE) organisation with over 15 000 members in Nigeria.
 					</p>
 				</div>
 				<div class="text-left">
