--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!doctype html>
 <html lang="en">
 
-<!-- Mirrored from thomello.github.io/portfolio/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 06 Oct 2023 09:45:01 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
 	<meta charset="utf-8">
 	<meta name="author" content="Thomello Mats'asa">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
 
-	<title>Stephen | Thomello Matsasa | Software Engineer</title>
-	<meta name="description" content="This is a portfolio website of Thomello - Stephen Mats'asa. A full-stack developer, Start-up founder and freelancer.">
-	<meta name="keywords" content="Thomello | Matsasa | Stephen | portfolio | website">
+	<title>Nelson | Tokelo Makafaane | Software Engineer</title>
+	<meta name="description" content="This is a portfolio website of Tokelo - Nelson Makafane. A full-stack developer, Start-up founder and freelancer.">
+	<meta name="keywords" content="TOKELO | Makafane | Nelson | portfolio | website">
 	<link rel="canonical" href="#" />
 	<meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
 	<meta property="og:image" content="images/new_logo.png">
-	<meta property="og:title" content="Stephen's portfolio website">
+	<meta property="og:title" content="Nelson's portfolio website">
 	<meta property="og:url" content="">
 	<meta property="og:site_name" content="">
-	<meta name="og:description" content="This is a portfolio website of Thomello - Stephen Mats'asa. A full-stack developer, Start-up founder and freelancer.">
+	<meta name="og:description" content="This is a portfolio website of Tokelo -Nelson Makafane. A full-stack developer,and  an Engineer.">
 
 	<meta name="robots" content="index, follow" />
 
@@ -101,14 +100,18 @@
 <section id="intro" class="py-20">
 	<div class="max-w-5xl mx-auto px-6 lg:px-0">
 		<h4 class="text-theme-aquamarine mb-3">Hi and welcome, my name is</h4>
-		<h1 class="text-theme-gray-light mb-3 text-2xl sm:text-6xl font-poppins font-black">Stephen.</h1>
+		<h1 class="text-theme-gray-light mb-3 text-2xl sm:text-6xl font-poppins font-black">Nelson.</h1>
 		<h1 class="text-theme-gray-deep mb-8 text-2xl sm:text-6xl font-poppins font-black">
-		I design and Develop Experiences that make people's lives simple.
+			I am poised to make a significant impact in the realm of information technology. My goal is to
+			continue learning, exploring, and creating innovative solutions that shape the future of computer
+			systems and engineering
 		</h1>
 		<div class="w-full sm:w-1/2 mb-12">
 			<p class="text-theme-gray-deep leading-relaxed">
-				At the present moment, I am a full-stack developer, a founder and a freelancer on <a class="text-theme-aquamarine" href="https://www.upwork.com/">Upwork</a>. 
-			</p> 
+		I am a dedicated individual who holds a diploma in Computer System Engineering from Lerotholi
+Polytechnic, where I acquired a strong foundation in the field of computer systems. My journey in the
+world of technology didn&#39;t stop there. I am currently pursuing my Bachelor&#39;s degree in Computer System
+Engineering at the National University of Lesotho
 		</div> 
 
 		<a href="https://calendly.com/thomellomatsasa/meeting" class="inline-block text-theme-aquamarine px-6 py-4 border border-theme-aquamarine rounded">
