--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ world of technology didn&#39;t stop there. I am currently pursuing my Bachelor&#
 Engineering at the National University of Lesotho
 		</div> 
 
-		<a href="https://calendly.com/thomellomatsasa/meeting" class="inline-block text-theme-aquamarine px-6 py-4 border border-theme-aquamarine rounded">
+		<a href="https://calendly.com/tokelomakafane/meeting" class="inline-block text-theme-aquamarine px-6 py-4 border border-theme-aquamarine rounded">
 			Set Appointment 
 		</a>
 	</div>
@@ -129,7 +129,13 @@ Engineering at the National University of Lesotho
 		<div class="flex flex-wrap items-center">
 			<div class="w-full sm:w-1/2 order-last sm:order-first">
 				<p class="text-theme-gray-deep leading-relaxed mb-3">
-					Hello again, and thank you for stopping by, I am Thomello Mats'asa, but for simplicity - i am Stephen. I am a passionate and aspiring full-stack developer and start-up founder. My journey in development started just when i was around 13 years old, when a friend of mine told me about this thing called "Coding". Ever since i heard the word, and researched about it i have never looked back. 
+				I am a dedicated individual who holds a diploma in Computer System Engineering from Lerotholi
+Polytechnic, where I acquired a strong foundation in the field of computer systems. My journey in the
+world of technology didn&#39;t stop there. I am currently pursuing my Bachelor&#39;s degree in Computer System
+Engineering at the National University of Lesotho.I am a software developer and NULHACKATHON 2020
+winner.I am poised to make a significant impact in the realm of information technology. My goal is to
+continue learning, exploring, and creating innovative solutions that shape the future of computer
+systems and engineering
 				</p>
 				<p class="text-theme-gray-deep leading-relaxed mb-3">
 					Fast forward today, i have had the privilege to work on very exciting projects, founded start-ups, participated in hackathon competitions and freelanced for clients around the world using a platform called <a href="#" class="text-theme-aquamarine font-medium">Upwork</a> . My main focus now is just to innovate, and bring digital solutions to the world.
@@ -145,20 +151,17 @@ Engineering at the National University of Lesotho
 					<p class="w-1/2 sm:w-2/5"><span class="font-black text-theme-aquamarine text-xs mr-3">&gt;</span>Bootstrap</p>
 					<p class="w-1/2 sm:w-2/5"><span class="font-black text-theme-aquamarine text-xs mr-3">&gt;</span>Tailwind CSS</p>
 					<p class="w-1/2 sm:w-2/5"><span class="font-black text-theme-aquamarine text-xs mr-3">&gt;</span>CSS3</p>
-					<p class="w-1/2 sm:w-2/5"><span class="font-black text-theme-aquamarine text-xs mr-3">&gt;</span>Webpack</p>
-					<p class="w-1/2 sm:w-2/5"><span class="font-black text-theme-aquamarine text-xs mr-3">&gt;</span>SASS</p>
+					<p class="w-1/2 sm:w-2/5"><span class="font-black text-theme-aquamarine text-xs mr-3">&gt;</span>Django</p>
 					<p class="w-1/2 sm:w-2/5"><span class="font-black text-theme-aquamarine text-xs mr-3">&gt;</span>PHP(+Laravel)</p>
 					<p class="w-1/2 sm:w-2/5"><span class="font-black text-theme-aquamarine text-xs mr-3">&gt;</span>MySQL</p>
-					<p class="w-1/2 sm:w-2/5"><span class="font-black text-theme-aquamarine text-xs mr-3">&gt;</span>Twilio API</p>
-					<p class="w-1/2 sm:w-2/5"><span class="font-black text-theme-aquamarine text-xs mr-3">&gt;</span>Google API</p>
-					<p class="w-1/2 sm:w-2/5"><span class="font-black text-theme-aquamarine text-xs mr-3">&gt;</span>Stripe</p>
+
 					<p class="w-1/2 sm:w-2/5"><span class="font-black text-theme-aquamarine text-xs mr-3">&gt;</span>WordPress</p>
 				</div>
 			</div>
 			<div class="w-full sm:w-1/2 flex items-center justify-center mb-6 sm:mb-0">
 				<div class="w-1/2 flex justify-center">
 					<div class="border-2 border-theme-aquamarine rounded">
-						<img src="images/stephen.jpg" class="-mt-6 -ml-6 mb-6 mr-6 w-full h-auto">
+						<img src="images/tokelo.jpg" class="-mt-6 -ml-6 mb-6 mr-6 w-full h-auto">
 					</div>
 				</div>
 			</div>
@@ -192,7 +195,6 @@ Engineering at the National University of Lesotho
 						<span class="text-theme-gray-deep text-xs mr-2">PHP(Laravel)</span>
 						<span class="text-theme-gray-deep text-xs mr-2">Tailwind CSS</span>
 						<span class="text-theme-gray-deep text-xs mr-2">Vue JS</span>
-						<span class="text-theme-gray-deep text-xs mr-2">Social Media APIs</span>
 						<span class="text-theme-gray-deep text-xs mr-2">Inertia JS</span>
 						<span class="text-theme-gray-deep text-xs mr-2">Jetstream</span>
 						<span class="text-theme-gray-deep text-xs mr-2">API's</span>
