--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@ systems and engineering
 			<div class="w-full sm:w-2/5 z-10">
 				<div class="text-left mb-4">
 					<p class="text-theme-aquamarine text-sm font-poppins">Client Project</p>
-					<h4 class="text-theme-gray-light text-2xl font-poppins font-extrabold">Organization Membership Portal</h4>
+					<h4 class="text-theme-gray-light text-2xl font-poppins font-extrabold">NTC Management membership System</h4>
 				</div>
 				<div class="bg-theme-blue-base rounded p-6 shadow-xl mr-0 sm:-mr-16 mb-6">
 					<p class="text-theme-gray-deep leading-relaxed">
-						A membership portal delivered to a Health, Safety and Environment (HSE) organisation with over 15 000 members in Nigeria.
+						This management System  is   meant to register church members in to different categories. it also sents Personalized Smses
 					</p>
 				</div>
 				<div class="text-left">
@@ -201,14 +201,14 @@ systems and engineering
 					</div>
 					<div class="flex justify-start">
 						 
-						<a href="https://portal.ispon.gov.ng/" target="_blank" class="text-theme-gray-light hover:text-theme-aquamarine text-xs h-6 w-6">
+						<a href="#" target="_blank" class="text-theme-gray-light hover:text-theme-aquamarine text-xs h-6 w-6">
 							<svg stroke="none" fill="currentColor" xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 194.818 194.818"><title>External</title><g><path d="M185.818,2.161h-57.04c-4.971,0-9,4.029-9,9s4.029,9,9,9h35.312l-86.3,86.3c-3.515,3.515-3.515,9.213,0,12.728 c1.758,1.757,4.061,2.636,6.364,2.636s4.606-0.879,6.364-2.636l86.3-86.3v35.313c0,4.971,4.029,9,9,9s9-4.029,9-9v-57.04 C194.818,6.19,190.789,2.161,185.818,2.161z"></path><path d="M149,77.201c-4.971,0-9,4.029-9,9v88.456H18v-122h93.778c4.971,0,9-4.029,9-9s-4.029-9-9-9H9c-4.971,0-9,4.029-9,9v140 c0,4.971,4.029,9,9,9h140c4.971,0,9-4.029,9-9V86.201C158,81.23,153.971,77.201,149,77.201z"></path></g></svg>
 						</a>
 					</div>
 				</div>
 			</div>
 			<div class="w-full sm:w-3/5 mb-4 sm:mb-0 order-first sm:order-last">
-				<img src="images/screenshot_ispon.png" class="rounded shadow">
+				<img src="images/ntc.png" class="rounded shadow">
 			</div>
 		</div>
 		<!--#End Experience Item--> 
