--- a/index.html
+++ b/index.html
@@ -216,31 +216,27 @@ systems and engineering
 		<!--Start Experience Item-->
 		<div class="flex flex-wrap items-center mb-6 sm:mb-32">
 			<div class="w-full sm:w-3/5 mb-4 sm:mb-0">
-				<img src="images/screenshot_HSEBoard.png" class="rounded shadow">
+				<img src="images/vog.png" class="rounded shadow">
 			</div>
 			<div class="w-full sm:w-2/5">
 				<div class="text-right mb-4">
 					<p class="text-theme-aquamarine text-sm font-poppins">Client Project</p>
-					<h4 class="text-theme-gray-light text-2xl font-poppins font-extrabold">Health, Safety & Environment Management Software</h4>
+					<h4 class="text-theme-gray-light text-2xl font-poppins font-extrabold">voice of God fm website</h4>
 				</div>
 				<div class="bg-theme-blue-base rounded p-6 shadow-xl ml-0 sm:-ml-16 mb-6">
 					<p class="text-theme-gray-deep leading-relaxed">
-						HSE Board lets you easily manage observations, incident reporting, HSE performance monitoring (HSE statistics), safety management audit, environmental management audit, quality management audit, and HSE investigations. <br><br>
-
-						This solution is practically useful in organizations or industries where Safety is mandatory - like construction, aviation, mining etc
+						The Website plays  the fm radio online and shows which program is currently on air
 					</p>
 				</div>
 				<div class="text-right">
 					<div class="flex justify-end mb-6">
 						<span class="text-theme-gray-deep text-xs mr-2">HTML</span>
-						<span class="text-theme-gray-deep text-xs mr-2">Tailwind-CSS</span>
-						<span class="text-theme-gray-deep text-xs mr-2">PHP(Laravel)</span>
-						<span class="text-theme-gray-deep text-xs mr-2">Inertia</span>
-						<span class="text-theme-gray-deep text-xs mr-2">VueJs</span>  
-						<span class="text-theme-gray-deep text-xs mr-2">Paystack APIs</span>  
+						<span class="text-theme-gray-deep text-xs mr-2">CSS</span>
+						<span class="text-theme-gray-deep text-xs mr-2">WordPress</span>
+						<span class="text-theme-gray-deep text-xs mr-2"> APIs</span>  
 					</div>
 					<div class="flex justify-end"> 
-						<a href="https://www.hseboard.net/" target="_blank" class="text-theme-gray-light hover:text-theme-aquamarine text-xs h-6 w-6">
+						<a href="#" target="_blank" class="text-theme-gray-light hover:text-theme-aquamarine text-xs h-6 w-6">
 							<svg stroke="none" fill="currentColor" xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 194.818 194.818"><title>External</title><g><path d="M185.818,2.161h-57.04c-4.971,0-9,4.029-9,9s4.029,9,9,9h35.312l-86.3,86.3c-3.515,3.515-3.515,9.213,0,12.728 c1.758,1.757,4.061,2.636,6.364,2.636s4.606-0.879,6.364-2.636l86.3-86.3v35.313c0,4.971,4.029,9,9,9s9-4.029,9-9v-57.04 C194.818,6.19,190.789,2.161,185.818,2.161z"></path><path d="M149,77.201c-4.971,0-9,4.029-9,9v88.456H18v-122h93.778c4.971,0,9-4.029,9-9s-4.029-9-9-9H9c-4.971,0-9,4.029-9,9v140 c0,4.971,4.029,9,9,9h140c4.971,0,9-4.029,9-9V86.201C158,81.23,153.971,77.201,149,77.201z"></path></g></svg>
 						</a>
 					</div>
@@ -254,11 +250,11 @@ systems and engineering
 			<div class="w-full sm:w-2/5 z-10">
 				<div class="text-left mb-4">
 					<p class="text-theme-aquamarine text-sm font-poppins">Client Project</p>
-					<h4 class="text-theme-gray-light text-2xl font-poppins font-extrabold">Kyoorate Social Media Automation</h4>
+					<h4 class="text-theme-gray-light text-2xl font-poppins font-extrabold">Moscet invoice and quotation  System</h4>
 				</div>
 				<div class="bg-theme-blue-base rounded p-6 shadow-xl mr-0 sm:-mr-16 mb-6">
 					<p class="text-theme-gray-deep leading-relaxed">
-						kyoorate helps automate social media activity for individuals and companies. Kyoorate has behind it an experienced team of marketers and designers that create these posts for individuals and companies - all they have to do is provide the information required during onboarding
+					MOSCET  system is aimed to keep customers information and  generate invoices and quotations and sales.
 					</p>
 				</div>
 				<div class="text-left">
@@ -267,20 +263,20 @@ systems and engineering
 						<span class="text-theme-gray-deep text-xs mr-2">PHP(Laravel)</span>
 						<span class="text-theme-gray-deep text-xs mr-2">Tailwind CSS</span>
 						<span class="text-theme-gray-deep text-xs mr-2">Vue JS</span>
-						<span class="text-theme-gray-deep text-xs mr-2">Social Media APIs</span>
+						<span class="text-theme-gray-deep text-xs mr-2">google Maps APIs</span>
 						<span class="text-theme-gray-deep text-xs mr-2">Inertia JS</span>
 						<span class="text-theme-gray-deep text-xs mr-2">Jetstream</span>
 					</div>
 					<div class="flex justify-start">
 						 
-						<a href="https://www.kyoorate.com/" target="_blank" class="text-theme-gray-light hover:text-theme-aquamarine text-xs h-6 w-6">
+						<a href="#" target="_blank" class="text-theme-gray-light hover:text-theme-aquamarine text-xs h-6 w-6">
 							<svg stroke="none" fill="currentColor" xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 194.818 194.818"><title>External</title><g><path d="M185.818,2.161h-57.04c-4.971,0-9,4.029-9,9s4.029,9,9,9h35.312l-86.3,86.3c-3.515,3.515-3.515,9.213,0,12.728 c1.758,1.757,4.061,2.636,6.364,2.636s4.606-0.879,6.364-2.636l86.3-86.3v35.313c0,4.971,4.029,9,9,9s9-4.029,9-9v-57.04 C194.818,6.19,190.789,2.161,185.818,2.161z"></path><path d="M149,77.201c-4.971,0-9,4.029-9,9v88.456H18v-122h93.778c4.971,0,9-4.029,9-9s-4.029-9-9-9H9c-4.971,0-9,4.029-9,9v140 c0,4.971,4.029,9,9,9h140c4.971,0,9-4.029,9-9V86.201C158,81.23,153.971,77.201,149,77.201z"></path></g></svg>
 						</a>
 					</div>
 				</div>
 			</div>
 			<div class="w-full sm:w-3/5 mb-4 sm:mb-0 order-first sm:order-last">
-				<img src="images/screenshot_kyoorate.png" class="rounded shadow">
+				<img src="images/moscet.png" class="rounded shadow">
 			</div>
 		</div>
 		<!--#End Experience Item--> 
