--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <section id="intro" class="py-20">
 	<div class="max-w-5xl mx-auto px-6 lg:px-0">
 		<h4 class="text-theme-aquamarine mb-3">Hi and welcome, my name is</h4>
-		<h1 class="text-theme-gray-light mb-3 text-2xl sm:text-6xl font-poppins font-black">Nelson.</h1>
+		<h1 class="text-theme-gray-light mb-3 text-2xl sm:text-6xl font-poppins font-black">Tokelo Makafane.</h1>
 		<h1 class="text-theme-gray-deep mb-8 text-2xl sm:text-6xl font-poppins font-black">
 			I am poised to make a significant impact in the realm of information technology. My goal is to
 			continue learning, exploring, and creating innovative solutions that shape the future of computer
@@ -137,9 +137,7 @@ winner.I am poised to make a significant impact in the realm of information tech
 continue learning, exploring, and creating innovative solutions that shape the future of computer
 systems and engineering
 				</p>
-				<p class="text-theme-gray-deep leading-relaxed mb-3">
-					Fast forward today, i have had the privilege to work on very exciting projects, founded start-ups, participated in hackathon competitions and freelanced for clients around the world using a platform called <a href="#" class="text-theme-aquamarine font-medium">Upwork</a> . My main focus now is just to innovate, and bring digital solutions to the world.
-				</p> 
+				
 				 
 				<p class="text-theme-gray-deep leading-relaxed mb-3">
 					Here some of the technologies i use recently:
@@ -186,7 +184,7 @@ systems and engineering
 				</div>
 				<div class="bg-theme-blue-base rounded p-6 shadow-xl mr-0 sm:-mr-16 mb-6">
 					<p class="text-theme-gray-deep leading-relaxed">
-						This management System  is   meant to register church members in to different categories. it also sents Personalized Smses
+						This management System    meant to register church members in to different categories. it also sents Personalized Smses
 					</p>
 				</div>
 				<div class="text-left">
@@ -221,7 +219,7 @@ systems and engineering
 			<div class="w-full sm:w-2/5">
 				<div class="text-right mb-4">
 					<p class="text-theme-aquamarine text-sm font-poppins">Client Project</p>
-					<h4 class="text-theme-gray-light text-2xl font-poppins font-extrabold">voice of God fm website</h4>
+					<h4 class="text-theme-gray-light text-2xl font-poppins font-extrabold">Voice of God fm website</h4>
 				</div>
 				<div class="bg-theme-blue-base rounded p-6 shadow-xl ml-0 sm:-ml-16 mb-6">
 					<p class="text-theme-gray-deep leading-relaxed">
@@ -293,7 +291,7 @@ systems and engineering
 				</div>
 				<div class="bg-theme-blue-base rounded p-6 shadow-xl ml-0 sm:-ml-16 mb-6">
 					<p class="text-theme-gray-deep leading-relaxed">
-						This website is a non profit making organization  aim to facilitate online donations
+						This website is a non profit making organization website aimed to facilitate online donations
 					</p>
 				</div>
 				<div class="text-right">
@@ -305,7 +303,7 @@ systems and engineering
 
 					</div>
 					<div class="flex justify-end"> 
-						<a href="#c:\Users\Makafane\Pictures\Screenshots\megafun.png" target="_blank" class="text-theme-gray-light hover:text-theme-aquamarine text-xs h-6 w-6">
+						<a href="#" target="_blank" class="text-theme-gray-light hover:text-theme-aquamarine text-xs h-6 w-6">
 							<svg stroke="none" fill="currentColor" xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 194.818 194.818"><title>External</title><g><path d="M185.818,2.161h-57.04c-4.971,0-9,4.029-9,9s4.029,9,9,9h35.312l-86.3,86.3c-3.515,3.515-3.515,9.213,0,12.728 c1.758,1.757,4.061,2.636,6.364,2.636s4.606-0.879,6.364-2.636l86.3-86.3v35.313c0,4.971,4.029,9,9,9s9-4.029,9-9v-57.04 C194.818,6.19,190.789,2.161,185.818,2.161z"></path><path d="M149,77.201c-4.971,0-9,4.029-9,9v88.456H18v-122h93.778c4.971,0,9-4.029,9-9s-4.029-9-9-9H9c-4.971,0-9,4.029-9,9v140 c0,4.971,4.029,9,9,9h140c4.971,0,9-4.029,9-9V86.201C158,81.23,153.971,77.201,149,77.201z"></path></g></svg>
 						</a>
 					</div>
@@ -319,11 +317,11 @@ systems and engineering
 			<div class="w-full sm:w-2/5 z-10">
 				<div class="text-left mb-4">
 					<p class="text-theme-aquamarine text-sm font-poppins">Client Project</p>
-					<h4 class="text-theme-gray-light text-2xl font-poppins font-extrabold">megafunTECH  website</h4>
+					<h4 class="text-theme-gray-light text-2xl font-poppins font-extrabold">MEGAFUNTECH  Website</h4>
 				</div>
 				<div class="bg-theme-blue-base rounded p-6 shadow-xl mr-0 sm:-mr-16 mb-6">
 					<p class="text-theme-gray-deep leading-relaxed">
-					This is website for megafunTECH which is an software development company 
+					This is website for MEGAFUNTECH which is an software development company 
 					</p>
 				</div>
 				<div class="text-left">
@@ -361,14 +359,14 @@ systems and engineering
 </section>
 
 <!-- Other noteworthy projects -->
-<section id="other_projects" class="py-20">
+<!-- <section id="other_projects" class="py-20">
 	<div class="max-w-5xl mx-auto px-6 lg:px-0">
 		<header class="mb-16 text-center">
 			<h3 class="text-3xl font-poppins text-theme-gray-light font-extrabold"><span class="text-theme-aquamarine text-base mr-3">03.</span><span class="font-bold"></span>Other Noteworthy Projects</h3>
 			<a href="#" class="text-theme-aquamarine text-base">Here are some of the projects i have made in the past.</a> 
 		</header>
 		<div class="flex flex-wrap mb-20">
-			<!--noteworthy-project item start -->
+		
 			<div class="p-2 w-full md:w-1/2 lg:w-1/3">
 				<div class="bg-theme-blue-base rounded shadow-lg p-6">
 					<div class="flex justify-between items-center mb-6">
@@ -397,8 +395,7 @@ systems and engineering
 					</div>
 				</div>
 			</div>
-			<!--#noteworthy-project item end -->
-			<!--noteworthy-project item start -->
+		
 			<div class="p-2 w-full md:w-1/2 lg:w-1/3">
 				<div class="bg-theme-blue-base rounded shadow-lg p-6">
 					<div class="flex justify-between items-center mb-6">
@@ -427,8 +424,7 @@ systems and engineering
 					</div>
 				</div>
 			</div>
-			<!--#noteworthy-project item end -->
-			<!--noteworthy-project item start -->
+			
 			<div class="p-2 w-full md:w-1/2 lg:w-1/3">
 				<div class="bg-theme-blue-base rounded shadow-lg p-6">
 					<div class="flex justify-between items-center mb-6">
@@ -457,7 +453,7 @@ systems and engineering
 					</div>
 				</div>
 			</div>
-			<!--#noteworthy-project item end --><!--nnoteworthy-project item start -->
+	
 			<div class="p-2 w-full md:w-1/2 lg:w-1/3">
 				<div class="bg-theme-blue-base rounded shadow-lg p-6">
 					<div class="flex justify-between items-center mb-6">
@@ -486,7 +482,7 @@ systems and engineering
 					</div>
 				</div>
 			</div>
-			<!--#noteworthy-project item end --><!--noteworthy-project item start -->
+			
 			<div class="p-2 w-full md:w-1/2 lg:w-1/3">
 				<div class="bg-theme-blue-base rounded shadow-lg p-6">
 					<div class="flex justify-between items-center mb-6">
@@ -520,9 +516,10 @@ systems and engineering
 			<a href="#experience" class="inline-block text-theme-aquamarine px-6 py-4 border border-theme-aquamarine rounded">More projects</a>
 		</div>
 	</div>
-</section>
+</section> -->
 
 <!-- Contact Section -->
+<!--
 <section id="testimonials" class="py-48">
 	<div class="max-w-5xl mx-auto px-6 lg:px-0">
 		<header class="mb-16 text-center"> 
@@ -711,7 +708,7 @@ systems and engineering
 			<a href="https://www.upwork.com/freelancers/~01f890f52d4adc1ca5" class="inline-block text-theme-aquamarine px-6 py-4 border border-theme-aquamarine rounded hover:bg-theme-aquamarine hover:text-white">See more</a>
 		</div>
 	</div>
-</section>
+</section> -->
 
 <!-- Contact Section -->
 <section id="contact" class="py-48">
@@ -724,6 +721,7 @@ systems and engineering
 			<div class="w-full sm:w-2/3 text-center">
 				<p class="text-theme-gray-deep">
 					Have any questions, Suggestions, Opportunities or just want to connect /? Please don't hesitate, contact me and i will get back to you as soon as i possibly can.
+					<h3>whatsapp or call +266 5647 9054</h3>
 				</p>
 			</div>
 		</div>
@@ -738,7 +736,7 @@ systems and engineering
 	<div class="max-w-5xl mx-auto px-6 lg:px-0">
 		<div class="w-full text-center">
 			<a href="#" class="text-xs text-theme-gray-deep hover:text-theme-aquamarine">
-				Website Built by Tokelo Makafane
+				<h4>Built by Tokelo Makafane @2023</h4> 
 			</a>
 		</div>
 	</div>
