--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 			<div class="flex text-sm items-center hidden md:block">
 				<a href="#about" class="text-theme-gray-light hover:text-theme-aquamarine mr-4"><span class="text-theme-aquamarine mr-2">01.</span><span>About</span></a>
 				<a href="#work" class="text-theme-gray-light hover:text-theme-aquamarine mr-4"><span class="text-theme-aquamarine mr-2">02.</span><span>Work</span></a>
-				<a href="#other_projects" class="text-theme-gray-light hover:text-theme-aquamarine mr-4"><span class="text-theme-aquamarine mr-2">03.</span><span>Other projects</span></a> 
-				<a href="#testimonials" class="text-theme-gray-light hover:text-theme-aquamarine mr-4"><span class="text-theme-aquamarine mr-2">04.</span><span>Testimonials</span></a> 
+				<!-- <a href="#other_projects" class="text-theme-gray-light hover:text-theme-aquamarine mr-4"><span class="text-theme-aquamarine mr-2">03.</span><span>Other projects</span></a> 
+				<a href="#testimonials" class="text-theme-gray-light hover:text-theme-aquamarine mr-4"><span class="text-theme-aquamarine mr-2">04.</span><span>Testimonials</span></a>  -->
 				<a href="#contact" class="text-theme-aquamarine px-4 py-2 border border-theme-aquamarine rounded">Contact Me</a>
 			</div>
 			<div x-show="mobileMenuOpen" @click.away="mobileMenuOpen = false" class="absolute z-20  top-0 inset-x-0 transition transform origin-top-right md:hidden">
@@ -721,7 +721,7 @@ systems and engineering
 			<div class="w-full sm:w-2/3 text-center">
 				<p class="text-theme-gray-deep">
 					Have any questions, Suggestions, Opportunities or just want to connect /? Please don't hesitate, contact me and i will get back to you as soon as i possibly can.
-					<h3>whatsapp or call +266 5647 9054</h3>
+					<h3  class="text-xs text-theme-gray-deep">whatsapp or call +266 5647 9054</h3>
 				</p>
 			</div>
 		</div>
@@ -736,7 +736,7 @@ systems and engineering
 	<div class="max-w-5xl mx-auto px-6 lg:px-0">
 		<div class="w-full text-center">
 			<a href="#" class="text-xs text-theme-gray-deep hover:text-theme-aquamarine">
-				<h4>Built by Tokelo Makafane @2023</h4> 
+				<h4  class="text-xs text-theme-gray-deep">Built by Tokelo Makafane @2023</h4> 
 			</a>
 		</div>
 	</div>
