--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<a href="#testimonials" class="text-theme-gray-light hover:text-theme-aquamarine mr-4"><span class="text-theme-aquamarine mr-2">04.</span><span>Testimonials</span></a>  -->
 				<a href="#contact" class="text-theme-aquamarine px-4 py-2 border border-theme-aquamarine rounded">Contact Me</a>
 			</div>
-			<div x-show="mobileMenuOpen" @click.away="mobileMenuOpen = false" class="absolute z-20  top-0 inset-x-0 transition transform origin-top-right md:hidden">
+			<div x-show="mobileMenuOpen" @click.away="mobileMenuOpen = true" class="absolute z-20  top-0 inset-x-0 transition transform origin-top-right md:hidden">
 				<div class="rounded-b-lg shadow-lg">
 					<div class="shadow-lg bg-theme-blue-base">
 						<div class="pt-5 pb-6 px-5 space-y-6 sm:space-y-8 sm:pb-8">
@@ -70,7 +70,7 @@
 									<img class="h-10 w-10" src="images/new_logo.png">
 								</div>
 								<div class="-mr-2">
-									<button @click="mobileMenuOpen = false" type="button" class="inline-flex items-center justify-center p-2 rounded-md text-theme-gray-deep hover:text-theme-aquamarine hover:bg-theme-blue-base focus:outline-none focus:bg-theme-blue-base focus:text-theme-aquamarine transition duration-150 ease-in-out">
+									<button @click="mobileMenuOpen = true" type="button" class="inline-flex items-center justify-center p-2 rounded-md text-theme-gray-deep hover:text-theme-aquamarine hover:bg-theme-blue-base focus:outline-none focus:bg-theme-blue-base focus:text-theme-aquamarine transition duration-150 ease-in-out">
 										<svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 											<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
 										</svg>
@@ -81,7 +81,7 @@
 								<nav class="space-y-8">
 									<div class="grid gap-7 sm:grid-cols-2 sm:row-gap-8 sm:col-gap-4">
 										<a href="#about" class="text-theme-gray-light hover:text-theme-aquamarine"><span class="text-theme-aquamarine mr-2">01.</span><span>About</span></a>
-										<a href="#experience" class="text-theme-gray-light hover:text-theme-aquamarine"><span class="text-theme-aquamarine mr-2">02.</span><span>Experience</span></a>
+
 										<a href="#work" class="text-theme-gray-light hover:text-theme-aquamarine"><span class="text-theme-aquamarine mr-2">03.</span><span>Work</span></a>
 										 
 										<a href="#contact" class="text-theme-aquamarine px-4 py-2 border border-theme-aquamarine rounded">Contact Me</a>
