--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<meta name="theme-color" content="#0a192f">
 
 	<link rel="icon" type="image/png" sizes="32x32" href="images/new_logo.png">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.7.4/dist/tailwind.min.css" rel="stylesheet">
 
 	<link rel="stylesheet" href="../../unpkg.com/tailwindcss%402.2.19/dist/tailwind.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&amp;display=swap" rel="stylesheet">
