--- a/index.html
+++ b/index.html
@@ -742,9 +742,7 @@ systems and engineering
 		</div>
 	</div>
 </section>
-
-<script src="../../cdn.jsdelivr.net/gh/alpinejs/alpine%40v2.3.5/dist/alpine.min.js" defer></script>
-</body>
+ <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script></body>
 
 
 </html>
