--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
 	<meta charset="utf-8">
-	<meta name="author" content="Thomello Mats'asa">
+	<meta name="author" content="Tokelo Makafane">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
 
 	<title>Nelson | Tokelo Makafaane | Software Engineer</title>
@@ -742,7 +742,8 @@ systems and engineering
 		</div>
 	</div>
 </section>
- <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script></body>
+ <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+</body>
 
 
 </html>
